Bug fix to remove canvas scale when pixel canvas is enabled

The canvas is already scaled and set to the correct size when pixel
canvas is enabled.

Bug: 811548
Change-Id: Iec2b0656ed26c49af783317cc3e0abfcc0780e29
Component: Canvas painter, Pixel Canvas, Scaling, HiDPI
Reviewed-on: https://chromium-review.googlesource.com/916529
Reviewed-by: Malay Keshav <malaykeshav@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536834}
Former-commit-id: 851d5768a96cb47068f68e05bd4b13454325b8d2