ui/compositor/canvas_painter.cc
@@ -9,30 +9,34 @@
 namespace ui {
 
 CanvasPainter::CanvasPainter(SkBitmap* output,
-                             const gfx::Size& paint_size,
-                             float raster_scale,
+                             const gfx::Size& output_size,
+                             float device_scale_factor,
                              SkColor clear_color,
                              bool is_pixel_canvas)
     : output_(output),
-      paint_size_(paint_size),
-      raster_scale_(raster_scale),
+      pixel_output_size_(
+          gfx::ScaleToCeiledSize(output_size, device_scale_factor)),
+      raster_scale_(is_pixel_canvas ? 1.f : device_scale_factor),
       clear_color_(clear_color),
       list_(new cc::DisplayItemList),
       context_(list_.get(),
-               raster_scale,
-               gfx::Rect(paint_size_),
+               device_scale_factor,
+               gfx::Rect(output_size),
                is_pixel_canvas) {}
 
 CanvasPainter::~CanvasPainter() {
-  gfx::Size pixel_size = gfx::ScaleToCeiledSize(paint_size_, raster_scale_);
-  SkImageInfo info = SkImageInfo::MakeN32(
-      pixel_size.width(), pixel_size.height(), kPremul_SkAlphaType);
+  SkImageInfo info =
+      SkImageInfo::MakeN32(pixel_output_size_.width(),
+                           pixel_output_size_.height(), kPremul_SkAlphaType);
   if (!output_->tryAllocPixels(info))
     return;
 
   SkCanvas canvas(*output_);
   canvas.clear(clear_color_);
 
+  // When pixel canvas is enabled, the recordings and canvas are already scaled
+  // to the correct raster size. This additional scaling is not required and
+  // hence |raster_scale_| should be equal to 1 during this operation.
   canvas.scale(raster_scale_, raster_scale_);
 
   list_->Finalize();
